--- a/grails-app/assets/javascripts/foodscore/templates/login.tpl.html
+++ b/grails-app/assets/javascripts/foodscore/templates/login.tpl.html
@@ -1,32 +1,24 @@
 
-   <div class="col col-lg-2"></div>
-   <div class="col col-lg-8">
-   <form>
-   <table >
-      <tbody>
-      <tr>
-         <td>
-            Username:
-         </td>
-         <td>
-            <input class="form-control text-input" type="text" name="username" ng-model="loginController.user.username" />
-         </td>
-      </tr>
-      <tr>
-         <td>
-            Password:
-         </td>
-         <td>
-            <input class="form-control text-input" type="password" name="password" ng-model="loginController.user.password" />
-         </td>
-      </tr>
-      <tr>
-         <td colspan="2">
-            <button type="button" class="btn btn-success" ng-click="loginController.login()">Login</button>
-         </td>
-      </tr>
-      </tbody>
-   </table>
-   </form>
+
+   <br/>
+   <div class="col col-lg-4 col-lg-offset-4">
+      <form  class="form-horizontal">
+         <div class="form-group">
+            <label class="control-label col-sm-4" for="username">Login:</label>
+            <div class="col col-sm-6">
+               <input class="form-control" type="text" id="username" name="username" ng-model="loginController.user.username" />
+            </div>
+         </div>
+         <div class="form-group">
+            <label class="control-label col-sm-4" for="password">Password:</label>
+            <div class="col col-sm-6">
+               <input class="form-control" type="password" id="password" name="password" ng-model="loginController.user.password" />
+            </div>
+         </div>
+         <div class="form-group">
+            <div class="col-sm-offset-5 col-sm-3">
+               <button type="button" class="btn btn-success" ng-click="loginController.login()">Connexion</button>
+            </div>
+         </div>
+      </form>
    </div>
-   <div class="col col-lg-2"></div>
