--- a/grails-app/assets/javascripts/foodscore/templates/menus.tpl.html
+++ b/grails-app/assets/javascripts/foodscore/templates/menus.tpl.html
@@ -4,22 +4,22 @@
     <div class="col col-lg-10">
         <table class="table-bordered table">
             <thead>
-                <th></th>
-                <th class="cell text-nowrap" ng-class="{'current-day': date == menuController.today}" ng-repeat="date in menuController.joursSemaine">
+                <th class="cell-days"></th>
+                <th class="text-nowrap cell-days" ng-class="{'current-day': date == menuController.today}" ng-repeat="date in menuController.joursSemaine">
                     <div>{{menuController.getJourLibelle(date)}} - {{date}}</div>
                 </th>
             </thead>
             <tbody>
             <tr ng-repeat="typeMenu in menuController.typesMenus">
-                <td>{{::typeMenu.libelle}}</td>
-                <td class="cell"  ng-class="{'current-day': date == menuController.today}" ng-repeat="date in menuController.joursSemaine">
+                <td class="cell-days">{{::typeMenu.libelle}}</td>
+                <td class="cell-content"  ng-class="{'current-day': date == menuController.today}" ng-repeat="date in menuController.joursSemaine">
                     <case-menu menu="menuController.getMenu(date,typeMenu.id)" date="date" type-menu-id="typeMenu.id"></case-menu>
                 </td>
             </tr>
             </tbody>
             <tfoot>
-                <td>Total</td>
-                <td class="cell text-nowrap" ng-class="{'current-day': date == menuController.today}" ng-repeat="date in menuController.joursSemaine">
+                <td class="cell-days">Total</td>
+                <td class="cell text-nowrap cell-content" ng-class="{'current-day': date == menuController.today}" ng-repeat="date in menuController.joursSemaine">
                     {{menuController.totalJour(date)}}
                 </td>
             </tfoot>
